# mangrobe

./: .gitignore  AGENTS.md  Cargo.toml  README.md  compose.yml
mangrobe-api-server/: AGENTS.md  Cargo.toml  Makefile  build.rs  compose.yml
mangrobe-api-server/migration/src/: m20251103_033827_initialize.rs
mangrobe-api-server/src/: application.rs  grpc.rs  main.rs
mangrobe-api-server/src/application/: data_definition.rs  data_manipulation.rs  data_manipulation_use_case.rs  information_schema.rs  mod.rs
mangrobe-api-server/src/application/data_definition/: create_table_param.rs  data_definition_use_case.rs
mangrobe-api-server/src/application/data_manipulation/: acquire_file_lock_param.rs  add_files_param.rs  change_files_param.rs  compact_files_param.rs  data_manipulation_use_case.rs  get_changes_param.rs  get_current_snapshot_param.rs  get_current_state_param.rs  get_file_info_param.rs  lock_control_use_case.rs  mod.rs  param_util.rs
mangrobe-api-server/src/application/information_schema/: information_schema_use_case.rs  list_streams_param.rs
mangrobe-api-server/src/application/lock_control/: acquire_file_lock_param.rs  lock_control_use_case.rs  mod.rs
mangrobe-api-server/src/application/util/: user_table.rs
mangrobe-api-server/src/domain/: model.rs  service.rs
mangrobe-api-server/src/domain/model/: change_file_entry.rs  change_request.rs  change_request_change_file_entries.rs  change_request_compact_file_entry.rs  change_request_file_data.rs  change_request_file_entry.rs  change_request_id.rs  change_request_raw_file_entry.rs  changeset.rs  commit.rs  commit_id.rs  committed_change_request.rs  current_file.rs  file.rs  file_column_statistics.rs  file_id.rs  file_lock_key.rs  file_metadata.rs  file_with_statistics.rs  idempotency_key.rs  lock_raw_file_entry.rs  mod.rs  snapshot.rs  stream.rs  stream_id.rs  user_table.rs  user_table_id.rs  user_table_name.rs  user_table_stream.rs
mangrobe-api-server/src/domain/service/: change_request_service.rs  committed_change_request_service.rs  file_lock_key_service.rs  file_service.rs  mod.rs  snapshot_service.rs  stream_service.rs  user_table_service.rs
mangrobe-api-server/src/grpc/: data_definition.rs  data_manipulation.rs  data_manipulation_service.rs  information_schema.rs  lock_control.rs  lock_control_service.rs  mod.rs  model.rs  proto.rs  util.rs
mangrobe-api-server/src/grpc/data_definition/: create_table_param.rs  data_definition_service.rs
mangrobe-api-server/src/util/: error.rs
mangrobe-lab/: Cargo.toml  build.rs  compose.yml
mangrobe-lab/examples/: README.md  compose.yml
mangrobe-lab/examples-flink/: Dockerfile  README.md  compose.yml  pom.xml
mangrobe-lab/examples/api-demo/: README.md  main.rs  operation.rs
mangrobe-lab/examples/datafusion-reader/: README.md  main.rs  prepare.rs  vortex_provider.rs
mangrobe-lab/examples/prometheus-flink/: README.md  compose.yml  main.rs  prometheus.rs
mangrobe-lab/examples/smoke-run/: README.md  main.rs  operation.rs
mangrobe-lab/src/: lib.rs  main.rs  prepare.rs  prometheus.rs  stream.rs  vortex_provider.rs
mangrobe-lab/src/grpc/: api_client.rs  proto.rs
mangrobe-lab/src/prometheus/: proto.rs  provider.rs  remote_write_v1.proto  vortex.rs
mangroove-api-server/: Cargo.toml  Makefile  build.rs
mangroove-api-server/migration/src/: lib.rs  m20251103_033827_initialize.rs
mangroove-api-server/src/: main.rs
mangroove-api-server/src/application/: action_use_case.rs  mod.rs  snapshot.rs  snapshot_use_case.rs
mangroove-api-server/src/domain/: change_log.rs  change_log_id.rs  file.rs  mod.rs  snapshot.rs
mangroove-api-server/src/grpc/: action_service.rs  data_manipulation_service.rs  mod.rs  snapshot_service.rs  util.rs
mangroove-api-server/src/util/: error.rs
mangroove-db/: Cargo.toml
mangroove-db/src/: main.rs  prepare.rs
mangroove-db/src/grpc/: api_client.rs  mod.rs  proto.rs
mangroove-reader/: Cargo.toml
mangroove-reader/src/: files_info.rs  main.rs  prepare.rs  vortex_provider.rs
mangroove-reader/src/grpc/: api_client.rs
(+136 files in other folders)
