[package]
name = "mangroove-api-server"
version = "0.1.0"
edition = "2024"

[dependencies]
prost = "0.14.1"
tonic = "0.14.2"
tonic-prost = "0.14.2"
tokio = { version = "1.48.0", features = ["rt", "rt-multi-thread", "macros"] }
sea-orm = { version = "1.1.17", features = ["sqlx-postgres", "runtime-tokio-rustls", "macros" ] }
log = "0.4.28"
tracing-subscriber = "0.3.20"
tracing = "0.1.41"
prost-types = "0.14.1"

[build-dependencies]
tonic-prost-build = "*"
