[package]
name = "mangroove-db"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.48.0", features = ["rt", "rt-multi-thread", "macros"] }
vortex = { version = "0.54.0", features = ["default", "tokio"] }
vortex-array = "0.54.0"
vortex-datafusion = "0.54.0"
datafusion = "50.3.0"
arrow-array = "56.2.0"
async-trait = "0.1.89"
prost = "0.14.1"
tonic = "0.14.2"
tonic-prost = "0.14.2"
object_store = { version = "0.12.4", features = ["aws"] }
clap = { version = "4.5.51", features = ["derive"] }
tempfile = "3.23.0"

[build-dependencies]
tonic-prost-build = "*"
